[package]
authors = ["Yao <yaojianpin@sohu.com>"]
description = "a simple, fast, tiny workflow server"
edition = "2021"
name = "acts-server"
version = "0.6.2"
keywords = ["workflow", "acts", "server"]
license = "Apache-2.0"
repository = "https://github.com/yaojianpin/acts-server.git"

[dependencies]
acts = { version = "0.12.3", features = ["store"] }
acts-channel = { version = "0.6.1" }
globset = "0.4.10"
hocon = "0.9.0"
prost-types = "0.11.9"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
time = { version = "0.3.36", features = ["macros"] }
tokio = "1.26.0"
tokio-stream = "0.1.12"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [
    "local-time",
    "env-filter",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = ["cli"]
resolver = "2"
