[package]
edition = "2021"
name = "acts-cli"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acts-channel = { version = "*", path = "https://github.com/yaojianpin/acts-channel.git" }
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
futures = "0.3.27"
once_cell = "1.17.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tonic = "0.8.3"
