[package]
edition = "2021"
name = "acts-cli"
version = "0.3.0"

[dependencies]
acts-channel = { version = "0.3.1" }
chrono = "0.4.24"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.27"
once_cell = "1.17.1"
prettytable-rs = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tonic = "0.8.3"
